ElasticStack-Kubernetes/kibana/kibana-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  namespace: elasticsearch
  labels:
    app: kibana
    role: kibana
spec:
  type: NodePort
  sessionAffinity: ClientIP ##Ensure session won't be directed to another kibana node
  ports:
  - name: "ui"
    port: 5601
    targetPort: 5601
  selector:
    app: kibana
    role: kibana
