ElasticStack-Kubernetes/kibana/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    app: kibana
    role: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
    role: kibana

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    role: kibana
    app: kibana
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kibana
      role: kibana
  template:
    metadata:
      namespace: elasticsearch
      labels:
        app: kibana
        role: kibana
    spec:
      containers:
      - name: kibana
        image: ocker.elastic.co/kibana/kibana:7.0.0
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/kibana.yml
          subPath: kibana.yml
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: kibana
