ElasticStack-Kubernetes/kibana/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elasticsearch
  labels:
    role: kibana
    app: elasticsearch
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: kibana-svc
            servicePort: 5601
